[tool.poetry]
name = "aca-protocols"
version = "0.1.0"
description = ""
authors = ["tobinio <Tobias.frischmann1@gmail.com>"]
readme = "README.md"

packages = [
    { include = "aca_protocols" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
uagents = "^0.17.0"
ruff = "^0.6.8"
setuptools = "^75.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"