[tool.poetry]
name = "aca-protocols"
version = "0.2.5.1"
description = ""
authors = ["tobinio <Tobias.frischmann1@gmail.com>"]
readme = "README.md"

packages = [
    { include = "aca_protocols" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
uagents = "^0.17.1"
ruff = "^0.7.4"
setuptools = "^75.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"